Wed Dec  5 14:14:32 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/String_Base.h:
          Corrected the description of the rep() method

Wed Dec  5 09:21:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/SString.cpp:
          Fixed compile error and warning that appeared in BCB build

Tue Dec  4 22:26:28 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/OS_String.h:
	* ace/OS_String.i:
	* ace/OS_String.cpp (strncpy, wcsncat_emulation): One more
	  string function that needs to be available.  (See next entry.)

Tue Dec 04 22:12:04 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/OS_String.h:
	* ace/OS_String.cpp (strsncpy): Made the wchar_t version of this
	  function available on all platforms and changed it to use type
	  ACE_WCHAR_T.

Tue Dec 04 20:08:49 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	  Merged in the new String_Base template class.

	* ace/Makefile: Added String_Base into the list of template
	  files.

	* ace/Basic_Types.h: Added definitions of ACE_WCHAR_T and
	  ACE_WINT_T which are defined to wchat_t and wint_t when
	  ACE_HAS_WCHAR are defined, and ACE_USHORT16 otherwise.  They are
	  needed to support various "wide character" string operations
	  that we need to support the templatized ACE_WString, which uses
	  ACE_USHORT16 as the wide char type when wchar_t is not
	  supported.

	* ace/OS_String.h:
	* ace/OS_String.inl:
	* ace/OS_String.cpp: Made several wchar version string functions
	  available no matter ACE_HAS_WCHAR is defined or not.  There are
	  more functions (the ones that have *_emulation helpers
	  available) that can be made availabe at all time, but I just
	  fixed the ones that ACE_WString needed for now.  We can add more
	  later.

	* ace/SString.h: Changed the definition of ACE_WSTRING_TYPE to
	  ACE_WCHAR_T.  ACE_WCHAR_T is defined in the same fashion as
	  ACE_WSTRING_TYPE was originally defined.

	* ace/Local_Name_Space.cpp: ACE_NS_WString::char_rep works just